2005-11-03  Daniel Jacobowitz  <dan@codesourcery.com>

        Checked in by Elena Zannoni  <ezannoni@redhat.com>

	* elfread.c (elf_symtab_read): Add number_of_symbols and
	symbol_table as arguments.  Do not load the symbol table
	here.
	(elf_symfile_read): Load the static and dynamic symbol tables
	here, before calling elf_symtab_read.  Also load any synthetic
	symbols and process those.

2005-11-03 Andrew Cagney  <cagney@gnu.org>

	Checked in by Elena Zannoni  <ezannoni@redhat.com>

	* dwarf2loc.c (dwarf2_evaluate_loc_desc): Handle DW_OP_piece
	reads.

2005-11-03  Daniel Jacobowitz  <dan@codesourcery.com>

	* linux-nat.c (linux_nat_resume): Add more debugging messages.  Do
	not short-circuit resuming all threads if the signal will be ignored
	in linux_nat_wait.

2005-11-02  Joel Brobecker  <brobecker@adacore.com>

	* NEWS: Changes sinces GDB 6.3 are now labled as changes in GDB 6.4.
	* README: Update README for GDB 6.4 release by replacing all 6.3
	occurrences with 6.4.

2005-11-02  Joel Brobecker  <brobecker@adacore.com>

	* version.in: Bump version number to 6.3.90 in preparation for
	the 6.4 release.

2005-11-01  Paul Gilliam  <pgilliam@us.ibm.com>

        * rs6000-tdep.c (rs6000_gdbarch_init): On GNU/Linux, assume that
	 bfd_mach_ppc64 has altivec unit, just like bfd_mach_ppc.

2005-11-01  Andrew Stubbs  <andrew.stubbs@st.com>

	* tui/tui-data.h (tui_line_or_address): Encapsulate the union in a
	struct with a tag.
	(tui_source_element, tui_source_info): Update.
	* tui/tui-disasm.c, tui/tui-source.c: Update to use the tagged union.
	* tui/tui-source.h, tui/tui-stack.c, tui/tui-win.c: Likewise.
	* tui/tui-winsource.c, tui/tui-data.c, tui/tui-layout.c: Likewise.
	* tui/tui-winsource.h: Likewise.

2005-11-01  Christopher Faylor  <cgf@timesys.com>

	* win32-nat.c (CYGWIN_SIGNAL_STRING): Delete.
	(_CYGWIN_SIGNAL_STRING): Define if not already defined in cygwin.h.
	(win32_add_thread): Use XZALLOC rather than xmalloc/memset.
	(register_loaded_dll): Ditto.