@@ -1,3 +1,10 @@
+2005-11-03  Jim Blandy  <jimb@redhat.com>
+
+        Checked in by Elena Zannoni  <ezannoni@redhat.com>	
+
+	* dwarf2read.c (file_full_name): Cope with file numbers that are
+	out of range for the given line header.
+
 2005-11-03  Daniel Jacobowitz  <dan@codesourcery.com>
 
         Checked in by Elena Zannoni  <ezannoni@redhat.com>
